; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_proxy.c_send_line_crlf.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_proxy.c_send_line_crlf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @send_line_crlf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_line_crlf(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.buffer, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @strlen(i8* %7)
  %9 = add nsw i32 %8, 3
  %10 = call i32 @alloc_buf(i32 %9)
  %11 = getelementptr inbounds %struct.buffer, %struct.buffer* %6, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = call i32 @buf_write(%struct.buffer* %6, i8* %12, i32 %14)
  %16 = call i32 @ASSERT(i32 %15)
  %17 = call i32 @buf_write(%struct.buffer* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 3)
  %18 = call i32 @ASSERT(i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @BSTR(%struct.buffer* %6)
  %21 = call i32 @send_line(i32 %19, i32 %20)
  store i32 %21, i32* %5, align 4
  %22 = call i32 @free_buf(%struct.buffer* %6)
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @alloc_buf(i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @buf_write(%struct.buffer*, i8*, i32) #1

declare dso_local i32 @send_line(i32, i32) #1

declare dso_local i32 @BSTR(%struct.buffer*) #1

declare dso_local i32 @free_buf(%struct.buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
